<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AdminLoginActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <TextView
        android:id="@+id/admin_msg_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:textSize="50dp"
        android:text="Admin Login"
        android:fontFamily="monospace"
        android:textColor="#FFFFFF"
        android:background="@drawable/textview_border"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/textview_border"
        android:fontFamily="monospace"
        android:hint="Email"
        android:gravity="center"
        android:textColorHint="#FFFFFF"
        android:textSize="30dp"
        android:inputType="textVisiblePassword"
        />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/textview_border"
        android:fontFamily="monospace"
        android:hint="Password"
        android:gravity="center"
        android:textColorHint="#FFFFFF"
        android:textSize="30dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:background="#4D4B4B"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Log In"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:fontFamily="monospace"
        />

</androidx.appcompat.widget.LinearLayoutCompat>