<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".CreateReviewActivity">

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#03A9F4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R8MyApartment"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/editTextApartmentName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter apartment name"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextReviewSubject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Subject of Review"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextApartmentName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <EditText
        android:id="@+id/editTextReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter your review"
        android:layout_margin="16dp"
        android:minLines = "5"
        android:maxLines = "10"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/editTextReviewSubject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter your rating"
        android:inputType="number"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextReview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSubmitReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Submit Review"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/editTextRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>