...
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize= "20sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="20sp"/>
    </LinearLayout>

...
